--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./apps/erpjs/test/jest-e2e.json",
     "pg": "docker run --rm --name pg-docker -e POSTGRES_PASSWORD=Coggel86 -e POSTGRES_DB=gt2 -d -p 5432:5432 postgres:12",
-    "keycloak": "docker run -p 8080:8080 -e KEYCLOAK_USER=admin -e KEYCLOAK_PASSWORD=admin quay.io/keycloak/keycloak:11.0.2"
+    "keycloak": "docker run -p 8080:8080 -e KEYCLOAK_USER=admin -e KEYCLOAK_PASSWORD=admin quay.io/keycloak/keycloak:11.0.2",
+    "docker:build:api": "docker build -t erpjs3-api . -f api.dockerfile",
+    "docker:run:api": "docker run --expose 3333 -env-file=.env -e POSTGRES_HOST=host.docker.internal -p 3333:3333 erpjs3-api"
   },
   "dependencies": {
     "@apollo/server": "^4.9.5",
