--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./apps/erpjs/test/jest-e2e.json",
     "pg": "docker run --rm --name pg-docker -e POSTGRES_PASSWORD=Coggel86 -e POSTGRES_DB=gt2 -d -p 5432:5432 postgres:12",
+    "generate-db": "npx typeorm-model-generator -h localhost -d gt2 -u postgres -x Coggel86 -e postgres -o ./apps/api/src/model/generated -s public",
     "keycloak": "docker run -p 8080:8080 -e KEYCLOAK_USER=admin -e KEYCLOAK_PASSWORD=admin quay.io/keycloak/keycloak:11.0.2",
+    "typeorm-migration": "./node_modules/.bin/typeorm migration:create -d apps/api/src/app/migrations -n",
+    "typeorm-migration-generate": "./node_modules/.bin/typeorm migration:generate -d apps/api/src/app/migrations -n",
     "docker:build:api": "docker build -t erpjs3-api . -f api.dockerfile",
     "docker:run:api": "docker run --expose 3333 -env-file=.env -e POSTGRES_HOST=host.docker.internal -p 3333:3333 erpjs3-api"
   },
