--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,31 +17,20 @@ jobs:
       MOCK: mock
     strategy:
       matrix:
-        node-version: [14.x]
+        node-version: [16.x]
 
     steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 16
+          cache: 'npm'
 
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-      - uses: actions/cache@v1
-        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
-
-      - run: yarn --frozen-lockfile
-      - run: yarn format:check
-      - run: yarn build api
+      - run: npm ci
+      - run: npm run format:check
+      - run: npm run build api
       - run: ( mv clients/admin/.eslintrc.js  clients/admin/.eslintrc__.js && yarn lint:check && mv clients/admin/.eslintrc__.js clients/admin/.eslintrc.js )
-      - run: yarn test api
+      - run: npm run test api
       - run: (cd clients/admin && yarn)
       - run: (cd clients/admin && yarn build)
       - run: (cd clients/admin && yarn lint)
