--- a/clients/admin/package.json
+++ b/clients/admin/package.json
@@ -82,7 +82,8 @@
     "d3": "5.x",
     "dotenv": "^8.2.0",
     "eslint": "^7.25.0",
-    "eslint-plugin-svelte3": "^3.2.0",
+    "eslint-plugin-svelte": "^2.35.1",
+    "eslint-plugin-svelte3": "^4.0.0",
     "fromentries": "^1.3.2",
     "graphql": "^15.4.0",
     "graphql-tag": "^2.11.0",
