--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@nestjs/graphql": "^12.0.11",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.1",
+    "async-lock": "^1.4.1",
     "aws-sdk": "^2.1515.0",
     "axios": "^1.6.2",
     "azure-storage": "^2.10.7",
