--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@nestjs/graphql": "^12.0.11",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.1",
+    "async-lock": "^1.4.1",
     "aws-sdk": "^2.1515.0",
     "axios": "^1.6.2",
     "azure-storage": "^2.10.7",
@@ -56,6 +57,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/async-lock": "^1.4.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.11",
